--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "patch-it",
   "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "version": "0.0.1",
+  "description": "A test suite management tool to help Funcom QA test new video game patches for blockers and bugs.",
   "keywords": [],
   "dependencies": {
     "bcrypt": "^0.8.1",
@@ -15,6 +15,7 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-jst": "~0.6.0",
     "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
@@ -34,6 +35,6 @@
     "type": "git",
     "url": "git://github.com/nuwen/patch-it.git"
   },
-  "author": "nuwen",
-  "license": ""
+  "author": "Leigh Johnson / Nuwen",
+  "license": "MIT"
 }
