--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,10 @@
     "angular-bootstrap": "~0.12.1",
     "jquery": "~2.1.3",
     "ng-clip": "~0.2.6",
-    "bootstrap-sass-official": "~3.3.4"
+    "bootstrap-sass-official": "~3.3.4",
+    "angular-cookies": "~1.3.15"
+  },
+  "resolutions": {
+    "angular": ">=1 <1.3.0"
   }
 }
