--- a/bower.json
+++ b/bower.json
@@ -24,9 +24,10 @@
     "jquery": "~2.1.3",
     "ng-clip": "~0.2.6",
     "bootstrap-sass-official": "~3.3.4",
-    "angular-cookies": "~1.3.15"
+    "angular-cookies": "~1.3.15",
+    "angular-animate": "~1.3.15"
   },
   "resolutions": {
-    "angular": ">=1 <1.3.0"
+    "angular": "1.3.15"
   }
 }
