--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "ng-clip": "~0.2.6",
     "bootstrap-sass-official": "~3.3.4",
     "angular-cookies": "~1.3.15",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "font-awesome": "~4.3.0"
   },
   "resolutions": {
     "angular": "1.3.15"
